<resources>
    <string name="app_name">Hedera Wallet</string>
    <string name="message_create_new_wallet">Like a password, this recovery phrase is the only way to recover a Hedera Wallet. Save the recovery phrase to recover your Hedera Wallet if it is deleted, lost, or you get a new phone. It is recommended to also save your accountID along with these 24 words.</string>
    <string name="message_restore_wallet">Enter, in order, the 22 or 24 words you were given when you created your previous wallet account. You will be prompted to enter the account id in next step.</string>
    <string name="message_restore_accountid">Please enter the Account ID associated with the recovery phrase entered.</string>
    <string name="bip32_migration_warning_message_purple">The latest version of the Hedera Wallet requires your public / private key pair and recovery phrase for account ID %1$s be updated. Tap here to perform this update, and securely document your new information.</string>
    <string name="bip32_migration_backup_message">Found below is your new recovery phrase. Please save it in a safe place (or places), where it won\'t be lost, and no one else will see it. Anyone who possesses this recovery phrase will have control over the account.</string>
    <string name="bip32_migration_prompt">We’ve updated the Hedera Wallet’s key generation mechanism to match industry standard encryption (BIP39).\n\nTap ‘Accept’ to update the public / private key pairs and recovery phrase associated with your existing Hedera account ID. (Recommended)\n\nTap ‘Skip’ to retain the public / private key pairs and recovery phrase associated with your existing Hedera account ID. You will eventually need ‘Accept’ this change in future Hedera Wallet application updates.</string>
    <string name="bip32_migration_backup_enter_account_id">After securely documenting your new recovery phrase, please enter your account ID in the field below and tap \'Confirm\'.</string>
    <string name="bip32_migration_confirm_message">The public / private key pair and recovery phrase for your Hedera account ID is being updated.\n\nThis may take a minute. Please do not quit this application or turn off your device during the update.</string>
    <string name="bip32_migration_error_message">It looks like something went wrong with the key update. I’m checking now whether the account currently has the new key or the old key.</string>
    <string name="bip32_migration_success_alert_title">Thank you</string>
    <string name="bip32_migration_success_alert_body">The private / public key pair and recovery phrase for account ID %1$s has been updated.\n\nThis account ID can now be recovered using your new recovery phrase, from both the Hedera Wallet and any other wallet or application which supports the BIP39 encryption standard.</string>
    <string name="update_key_prompt">This will update your key pair and your recovery phrase.</string>
    <string name="default_private_key">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="copy_data_clipboard_message">Address copied to clipboard"</string>
    <string name="copy_data_clipboard_account_id">Address copied to clipboard"</string>
    <string name="copy_data_clipboard_account_data">Your account info is copied successfully"</string>
    <string name="copy_data_clipboard_passphrase">Recovery phrase copied to clipboard"</string>
    <string name="copy_data_clipboard_nodes">Nodes copied to clipboard"</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="decline">Decline</string>
    <string name="agree">Agree</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="text_default_account">Default Account</string>
    <string name="text_hgc_value">0.000</string>
    <string name="text_hgc_icon">H</string>
    <string name="text_hgc_currency_icon">"\u210f"</string>
    <string name="text_key_short">Ending in...%1$s</string>
    <string name="text_last_updated">Last updated %1$s</string>
    <string name="text_last_updated_placeholder">Last updated 10/10/2019</string>
    <string name="text_key_short_placeholder">Ending in...4a19a7</string>
    <string name="text_request">REQUESTS</string>
    <string name="text_accounts">ACCOUNTS</string>
    <string name="text_settings">SETTINGS</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_enter_your_pin">Enter your PIN</string>
    <string name="text_invalid_pin">Invalid PIN, please try again</string>
    <string name="text_get_started_with_hgc">Get Started on Hedera</string>
    <string name="text_account">Account</string>
    <string name="text_unverified">unverified</string>
    <string name="text_account_id_value">0.0.9</string>
    <string name="text_signature_algoritms">Signature Algorithms</string>
    <string name="text_ED25519">ED25519</string>
    <string name="text_EC384">EC384</string>
    <string name="text_dismiss">Dismiss</string>
    <string name="text_textview">TextView</string>
    <string name="text_node">35.170.13.208:50211</string>
    <string name="text_or">OR</string>
    <string name="text_notes">NOTES</string>
    <string name="text_time">2 minute ago</string>
    <string name="text_change">CHANGE</string>
    <string name="text_account_name">ACCOUNT NAME</string>
    <string name="text_public_address">PUBLIC KEY</string>
    <string name="text_private_key">PRIVATE KEY</string>
    <string name="text_hide">HIDE</string>
    <string name="text_display">DISPLAY</string>
    <string name="text_hgc_wallet">Hedera Wallet</string>
    <string name="text_version">Version 1.0</string>
    <string name="text_build">Build 1</string>
    <string name="text_account_id">ACCOUNT ID</string>
    <string name="text_dollor_icon">$</string>
    <string name="text_no_transactions">No Transactions</string>
    <string name="text_from">FROM</string>
    <string name="text_to">TO</string>
    <string name="text_amount">AMOUNT</string>
    <string name="text_initial_amount">INITIAL AMOUNT</string>
    <string name="text_fee">FEE</string>
    <string name="text_max_fee">MAX FEE</string>
    <string name="text_create_account_renew_info">Account AutoRenew Period is 3 months</string>
    <string name="text_note">NOTE</string>
    <string name="text_profile">PROFILE</string>
    <string name="text_name">Name</string>
    <string name="text_notifications">NOTIFICATIONS</string>
    <string name="text_verify">VERIFY</string>
    <string name="text_default_fee">Max Fee</string>
    <string name="text_security">Security</string>
    <string name="btn_text_email">Email</string>
    <string name="btn_text_copy">Copy</string>
    <string name="btn_text_done">Done</string>
    <string name="btn_text_accept">Accept</string>
    <string name="btn_text_full_terms">See full terms &amp; conditions</string>
    <string name="btn_text_create_new_wallet">CREATE NEW WALLET</string>
    <string name="btn_text_restore_wallet">RESTORE EXISTING WALLET</string>
    <string name="btn_text_confirm">CONFIRM</string>
    <string name="btn_text_request">REQUEST</string>
    <string name="btn_text_request_account_create">Request Account Create</string>
    <string name="btn_text_pay">PAY</string>
    <string name="btn_text_terms">TERMS</string>
    <string name="btn_text_privacy_policy">PRIVACY POLICY</string>
    <string name="btn_text_close">close</string>
    <string name="btn_text_cancel">CANCEL</string>
    <string name="btn_text_save">SAVE</string>
    <string name="btn_text_skip">SKIP</string>
    <string name="btn_text_existing">EXISTING</string>
    <string name="btn_text_new">NEW</string>
    <string name="btn_text_fingerprint">Enable fingerprint</string>
    <string name="btn_text_setup_pin">setup %1$s digit password</string>
    <string name="btn_text_qr">QR</string>
    <string name="btn_text_send">SEND</string>
    <string name="btn_text_restore">RESTORE</string>
    <string name="btn_text_next">NEXT</string>
    <string name="btn_text_migrate">Migrate</string>
    <string name="btn_text_abort">Abort</string>
    <string name="btn_text_retry">RETRY</string>
    <string name="btn_text_help">HELP</string>
    <string name="btn_text_remove">REMOVE</string>
    <string name="btn_text_licenses">Licenses</string>
    <string name="checkbox_text_hidden">HIDDEN</string>
    <string name="checkbox_text_active">Active</string>
    <string name="checkbox_request_notification">REQUEST NOTIFICATION</string>
    <string name="checkbox_add_note">ADD NOTE</string>
    <string name="edittext_hint_host">Host e.g. 100.31.255.63</string>
    <string name="edittext_hint_host_with_port">Host e.g. 100.31.255.63:8081</string>
    <string name="edittext_hint_port">Port e.g. 52011</string>
    <string name="edittext_hint_account_id">AccountID e.g. 0.0.2</string>
    <string name="radio_text_enable_fingerprint">ENABLE FINGERPRINT LOGIN</string>
    <string name="radio_text_enable_pin_login">ENABLE PIN LOGIN</string>
    <string name="radio_text_payment_confirmations">PAYMENT CONFIRMATIONS</string>
    <string name="radio_text_receive_funds">RECEIVE FUNDS</string>
    <string name="text_account_not_linked">Account is not linked</string>
    <string name="transaction_submitted_successfully">Transaction submitted successfully</string>
    <string name="invalid_account_id">INVALID ACCOUNT ID</string>
    <string name="failed_to_fetch_balances">Failed to update balance</string>
    <string name="failed_to_fetch_records">Failed to fetch transaction records</string>
    <string name="scan">SCAN</string>
    <string name="add">ADD</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="accountID">AccountID</string>
    <string name="menuItem_default_account">Default Account</string>
    <string name="menuItem_create_account">Create Account</string>
    <string name="menuItem_requests">Requests</string>
    <string name="menuItem_accounts">Accounts</string>
    <string name="menuItem_activity">Activity</string>
    <string name="menuItem_security">Security</string>
    <string name="menuItem_backup_phrases">Recovery Phrase</string>
    <string name="menuItem_pay_to_exchange">Pay to Third Party</string>
    <string name="menuItem_enable_biometric">Enable Fingerprint ID</string>
    <string name="menuItem_enable_pin">Enable PIN</string>
    <string name="menuItem_network">Network</string>
    <string name="menuItem_nodes">Nodes</string>
    <string name="menuItem_get_records">Get Records</string>
    <string name="menuItem_about">About</string>
    <string name="menuItem_profile">Profile</string>
    <string name="menuItem_update_key">Update Key</string>
    <string name="menuItem_app_information">App Information</string>
    <string name="placeholder_name_optional">name (optional)</string>
    <string name="placeholder_account_id">e.g. 0.0.12</string>
    <string name="enable_biometric">Enable Fingerprint ID</string>
    <string name="enable_pin">Enable PIN</string>
    <string name="last">Last</string>
    <string name="bid">Bid</string>
    <string name="ask">Ask</string>
</resources>