<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background_page_content">

    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textview_node_host_title"
            style="@style/CaptionTextNote"
            android:text="@string/host"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/edittext_node_host"
            style="@style/EditTextSingleLineBox"
            android:padding="10dp"
            android:inputType="phone"
            android:hint="@string/edittext_hint_host"
            android:focusableInTouchMode="true" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textview_node_port_title"
            style="@style/CaptionTextNote"
            android:text="@string/port"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/edittext_node_port"
            style="@style/EditTextSingleLineBox"
            android:padding="10dp"
            android:inputType="phone"
            android:hint="@string/edittext_hint_port"
            android:focusableInTouchMode="true" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textview_node_account_title"
            style="@style/CaptionTextNote"
            android:text="@string/accountID"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/edittext_node_account"
            style="@style/EditTextSingleLineBox"
            android:padding="10dp"
            android:hint="@string/edittext_hint_account_id"
            android:inputType="phone"
            android:focusableInTouchMode="true" />

    </LinearLayout>



    <CheckBox
        android:id="@+id/checkBox_active"
        style="@style/Checkbox"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:text="@string/checkbox_text_active"
        android:checked="true"
        android:textSize="15sp"
        />


    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/HgcButton"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:background="@drawable/background_button_hgc"
        android:text="@string/btn_text_save" />

</LinearLayout>
