<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:id="@+id/text_exchange_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/PrimaryTextRow"
        android:text="Exchange"
       />

    <TextView
        android:id="@+id/text_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SecondaryTextRow"
        android:text="@string/last"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/text_bid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SecondaryTextRow"
        android:text="@string/bid"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/text_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SecondaryTextRow"
        android:text="@string/ask"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/DateTimeRow"
        android:text="@string/text_last_updated"
        />

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/line_seperator_table_row" />

</LinearLayout>