<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/PageLayout"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            style="@style/ContentLayout"
            android:orientation="vertical">


            <TextView
                android:id="@+id/text_nick_name"
                style="@style/CaptionText"
                android:text="@string/text_name" />

            <EditText
                android:id="@+id/edittext_name"
                style="@style/EditTextSingleLineBox"
                android:layout_marginTop="5dp"
                android:focusableInTouchMode="true" />

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/text_default_fee"
                style="@style/CaptionText"
                android:text="@string/text_default_fee" />


            <RelativeLayout
                android:id="@+id/layout_default_Fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/edittext_default_fee"
                    style="@style/EditTextSingleLineBox"
                    android:layout_marginTop="5dp"
                    android:paddingStart="20dp"
                    android:focusableInTouchMode="true" />
                <TextView
                    style="@style/TextViewInsideAmountEditText"
                    android:id="@+id/text_hgc_icon"
                    android:text="@string/text_hgc_currency_icon"
                    android:layout_alignBaseline="@+id/edittext_default_fee"
                    />
            </RelativeLayout>


            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/text_security"
                style="@style/CaptionText"
                android:text="@string/text_security" />
            <LinearLayout
                android:id="@+id/btn_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_pin"
                    android:layout_width="wrap_content"
                    style="@style/HgcButton"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/background_button_hgc"
                    android:text="@string/enable_pin" />

                <Button
                    android:id="@+id/btn_fingerprint"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/background_button_hgc"
                    style="@style/HgcButton"
                    android:text="@string/enable_biometric"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
