<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_page_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_above="@+id/btn_term"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="@dimen/margin_page_content"
        android:layout_marginRight="@dimen/margin_page_content"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_hgc_wallet"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/font_hgc_symbol_very_large"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/text_version"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/text_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_version"
            android:layout_centerHorizontal="true"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/font_light_large"
            android:layout_above="@+id/text_build"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/text_build"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_build"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/font_light_large"
            android:layout_centerInParent="true"
            android:layout_gravity="center"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_term"
        android:layout_width="wrap_content"
        style="@style/HgcButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_button_hgc"
        android:text="@string/btn_text_terms"
        android:layout_above="@+id/btn_privacy_policy"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_privacy_policy"
        android:layout_width="wrap_content"
        style="@style/HgcButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_button_hgc"
        android:text="@string/btn_text_privacy_policy"
        android:layout_marginBottom="20dp"/>
    </RelativeLayout>
</LinearLayout>
